[package]
name = "biosctl"
version = "0.3.2-dev"
authors = ["Antoine Gourlay <antoine@gourlay.fr>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1"
log = "0.4"

[dependencies.env_logger]
version = "0.9"
default-features = false
features = ["atty", "termcolor"]

[dependencies.structopt]
version = '0.3'
default-features = false
features = ['suggestions']

[build-dependencies]
version_check = "0.9"

[profile.release]
lto = true
